<resources>
    <string name="app_name">Note App With TDAH</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login__login_button">Iniciar sesión</string>
    <string name="login__signup_button">Registrarme</string>
    <string name="login__password_recovery_button">Recuperar contraseña</string>
    <string name="login_email_hint">Correo electrónico</string>
    <string name="login__password_hint">Contraseña</string>
    <string name="login__signup_header">Registrarse</string>
    <string name="login__password_recovery_header">¿Olvidaste tu contraseña?</string>
    <string name="tittle_app_name">Notes App</string>
    <string name="description_app">Una agenda sencilla y amigable\nespecial para personas \ncon TDAH</string>
    <string name="developed_by">By\n Ademir Espinoza Android Developer</string>
    <string name="fragment1">¡Todos tus apuntes en la nube!</string>
</resources>