<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".SplashActivity">

 <ImageView
     android:id="@+id/imageView"
     android:layout_width="150dp"
     android:layout_height="150dp"
     android:layout_marginBottom="16dp"
     android:elevation="10dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.47000003"
     app:srcCompat="@drawable/logo_n_bg" />

 <TextView
     android:id="@+id/textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="32dp"
     android:fontFamily="@font/sf_pro_display_medium"
     android:text="@string/app_name"
     android:textColor="#0560FA"
     android:textSize="24sp"
     android:textStyle="bold"
     android:gravity="center"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/imageView" />

 <TextView
     android:id="@+id/textView2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="28dp"
     android:fontFamily="@font/sf_pro_display_medium"
     android:gravity="center"
     android:text="@string/description_app"
     android:textColor="#1B1B1B"
     android:textSize="12sp"
     android:textStyle="normal"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.492"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView" />

 <ProgressBar
     android:id="@+id/progressBar"
     style="?android:attr/progressBarStyle"
     android:theme="@style/progressBar"
     android:layout_width="25dp"
     android:layout_height="25dp"
     app:layout_constraintBottom_toTopOf="@+id/textView3"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView2" />

 <TextView
     android:id="@+id/textView3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
     android:fontFamily="@font/sf_pro_display_medium"
     android:gravity="center"
     android:text="@string/developed_by"
     android:textColor="#0560FA"
     android:textSize="14sp"
     android:textStyle="normal"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>